--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 </head>
 <body>
   <header>
-    <h1 class="site-title">NAKAYAMA Kahoko</h1>
-    <nav class="nav">
-      <a href="index.html">Works</a>
-      <a href="exhibition.html">Exhibition</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
+   <h1 class="site-title">NAKAYAMA Kahoko</h1>
+  <nav class="nav">
+    <a href="index.html">Works</a>
+    <a href="exhibition.html">Exhibition</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+  <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+</header>
 
   <main class="gallery">
     <!-- ▼ 作品1のサムネイル -->
