--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <title>works</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+  
+<script>
+  function toggleMenu() {
+    const nav = document.querySelector('.nav');
+    nav.classList.toggle('active');
+  }
+</script>
+
 <body>
   <header>
    <h1 class="site-title">NAKAYAMA Kahoko</h1>
