--- a/exhibition.html
+++ b/exhibition.html
@@ -2,20 +2,21 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Exhibition</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
+   <header>
     <h1 class="site-title">NAKAYAMA Kahoko</h1>
-    <nav class="nav">
+    <div class="hamburger">&#9776;</div>
+     <nav class="nav">
       <a href="index.html">Works</a>
       <a href="exhibition.html">Exhibition</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
+
   <main>
     <div style="padding:50px; 100px; 100px; 100px;">
     <div>
@@ -37,5 +38,17 @@
       </div>
     </div>
   </main>
+ 
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const hamburger = document.querySelector(".hamburger");
+      const nav = document.querySelector(".nav");
+
+      hamburger.addEventListener("click", function () {
+        nav.classList.toggle("show");
+      });
+    });
+  </script>
+
 </body>
 </html>
