--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
     <img src="thumb1.jpg" alt="作品1" class="thumbnail" onclick="openModal(0)">
     <img src="thumb2.jpg" alt="作品2" class="thumbnail" onclick="openModal(1)">
     <img src="thumb3.jpg" alt="作品3" class="thumbnail" onclick="openModal(2)">
+    <img src="thumb4.jpg" alt="作品4" class="thumbnail" onclick="openModal(3)">
+    <img src="thumb5.jpg" alt="作品5" class="thumbnail" onclick="openModal(4)">
+    <img src="thumb6.jpg" alt="作品6" class="thumbnail" onclick="openModal(5)">
+    <img src="thumb7.jpg" alt="作品7" class="thumbnail" onclick="openModal(6)">
+    <img src="thumb8.jpg" alt="作品8" class="thumbnail" onclick="openModal(7)">
+    <img src="thumb9.jpg" alt="作品9" class="thumbnail" onclick="openModal(8)">
   </main>
 
   <!-- モーダル -->
