--- a/index.html
+++ b/index.html
@@ -61,6 +61,31 @@
         title: "作品タイトル3",
         caption: "△△の構造を活かして制作しました。"
       }
+       {
+        image: "thumb4.jpg",
+        title: "作品タイトル3",
+        caption: "△△の構造を活かして制作しました。"
+      }
+     {
+        image: "thumb5.jpg",
+        title: "作品タイトル3",
+        caption: "△△の構造を活かして制作しました。"
+      }
+     {
+        image: "thumb6.jpg",
+        title: "作品タイトル3",
+        caption: "△△の構造を活かして制作しました。"
+      }
+     {
+        image: "thumb7.jpg",
+        title: "作品タイトル3",
+        caption: "△△の構造を活かして制作しました。"
+      }
+     {
+        image: "thumb8.jpg",
+        title: "作品タイトル3",
+        caption: "△△の構造を活かして制作しました。"
+      }
     ];
 
     let currentIndex = 0;
