--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     const works = [
       {
         image: "thumb1.jpg",
-        title: "作品タイトル1",
-        caption: "この作品は素材Aを使い、○○を表現しています。"
+        title: "plastic dan-pole",
+        caption: "2019　18×18×100cm　プラダン、木材、回転台"
       },
       {
         image: "thumb2.jpg",
