--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </header>
 
   <main class="gallery">
-    <img src="thumb1.jpg" alt="作品1" class="thumbnail" onclick="openModal(1)">
+    <img src="thumb1.jpg" alt="作品1" class="thumbnail" onclick="openModal(0)">
     <img src="thumb2.jpg" alt="作品2" class="thumbnail" onclick="openModal(1)">
     <img src="thumb3.jpg" alt="作品3" class="thumbnail" onclick="openModal(2)">
     <img src="thumb4.jpg" alt="作品4" class="thumbnail" onclick="openModal(3)">
@@ -30,7 +30,7 @@
     <img src="thumb9.jpg" alt="作品9" class="thumbnail" onclick="openModal(8)">
   </main>
 
-  <!-- モーダル -->
+ <!-- モーダル -->
   <div id="modal" class="modal">
     <span class="close" onclick="closeModal()">&times;</span>
     <div class="modal-content">
@@ -48,8 +48,8 @@
     const works = [
       {
         image: "thumb1.jpg",
-        title: "plastic dan-pole",
-        caption: "2019　18×18×100cm　プラダン、木材、回転台"
+        title: "作品タイトル1",
+        caption: "この作品は素材Aを使い、○○を表現しています。"
       },
       {
         image: "thumb2.jpg",
@@ -58,31 +58,6 @@
       },
       {
         image: "thumb3.jpg",
-        title: "作品タイトル3",
-        caption: "△△の構造を活かして制作しました。"
-      }
-       {
-        image: "thumb4.jpg",
-        title: "作品タイトル3",
-        caption: "△△の構造を活かして制作しました。"
-      }
-     {
-        image: "thumb5.jpg",
-        title: "作品タイトル3",
-        caption: "△△の構造を活かして制作しました。"
-      }
-     {
-        image: "thumb6.jpg",
-        title: "作品タイトル3",
-        caption: "△△の構造を活かして制作しました。"
-      }
-     {
-        image: "thumb7.jpg",
-        title: "作品タイトル3",
-        caption: "△△の構造を活かして制作しました。"
-      }
-     {
-        image: "thumb8.jpg",
         title: "作品タイトル3",
         caption: "△△の構造を活かして制作しました。"
       }
