--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <img src="thumb1.jpg" alt="作品1" class="thumbnail" onclick="openModal(0)">
     <img src="thumb2.jpg" alt="作品2" class="thumbnail" onclick="openModal(1)">
     <img src="thumb3.jpg" alt="作品3" class="thumbnail" onclick="openModal(2)">
+    <img src="thumb4.jpg" alt="作品4" class="thumbnail" onclick="openModal(3)">
   </main>
   
  <!-- モーダル -->
@@ -53,6 +54,11 @@
       {
         image: "thumb3.jpg",
         title: "作品タイトル3",
+        caption: "△△の構造を活かして制作しました。"
+      }
+      {
+        image: "thumb4.jpg",
+        title: "作品タイトル4",
         caption: "△△の構造を活かして制作しました。"
       }
     ];
