--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
       caption: "この作品は素材Aを使い、○○を表現しています。"
     },
     {
+      image: "thumb1-2.jpg",
+      title: "作品タイトル1-2",
+      caption: "自然なズレによって構造が現れます。"
+    },
+    {
       image: "thumb2.jpg",
       title: "作品タイトル2",
       caption: "これは現象Bに着目したインスタレーションです。"
@@ -64,6 +69,16 @@
     {
       image: "thumb6.jpg",
       title: "作品タイトル6",
+      caption: "自然なズレによって構造が現れます。"
+    },
+    {
+      image: "thumb7.jpg",
+      title: "作品タイトル7",
+      caption: "自然なズレによって構造が現れます。"
+    },
+    {
+      image: "thumb8.jpg",
+      title: "作品タイトル8",
       caption: "自然なズレによって構造が現れます。"
     }
   ];
