--- a/index.html
+++ b/index.html
@@ -80,6 +80,61 @@
       image: "thumb8.jpg",
       title: "作品タイトル8",
       caption: "自然なズレによって構造が現れます。"
+    },
+    {
+      image: "thumb9.jpg",
+      title: "作品タイトル9",
+      caption: "自然なズレによって構造が現れます。"
+    },
+    {
+      image: "thumb10.jpg",
+      title: "作品タイトル10",
+      caption: "自然なズレによって構造が現れます。"
+    },
+    {
+      image: "thumb11.jpg",
+      title: "作品タイトル11",
+      caption: "自然なズレによって構造が現れます。"
+    },
+    {
+      image: "thumb12.jpg",
+      title: "作品タイトル12",
+      caption: "自然なズレによって構造が現れます。"
+    },
+    {
+      image: "thumb13.jpg",
+      title: "作品タイトル13",
+      caption: "自然なズレによって構造が現れます。"
+    },
+    {
+      image: "thumb14.jpg",
+      title: "作品タイトル14",
+      caption: "自然なズレによって構造が現れます。"
+    },
+    {
+      image: "thumb16.jpg",
+      title: "作品タイトル16",
+      caption: "自然なズレによって構造が現れます。"
+    },
+    {
+      image: "thumb17.jpg",
+      title: "作品タイトル17",
+      caption: "自然なズレによって構造が現れます。"
+    },
+    {
+      image: "thumb18.jpg",
+      title: "作品タイトル18",
+      caption: "自然なズレによって構造が現れます。"
+    },
+    {
+      image: "thumb19.jpg",
+      title: "作品タイトル19",
+      caption: "自然なズレによって構造が現れます。"
+    },
+    {
+      image: "thumb20.jpg",
+      title: "作品タイトル20",
+      caption: "自然なズレによって構造が現れます。"
     }
   ];
 
