--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
       caption: "この作品は素材Aを使い、○○を表現しています。"
     },
     {
+      image: "thumb1-3.jpg",
+      title: "作品タイトル1-3",
+      caption: "自然なズレによって構造が現れます。"
+    }, 
+    {
+      image: "thumb1-4.jpg",
+      title: "作品タイトル1-4",
+      caption: "自然なズレによって構造が現れます。"
+    },
+    {
       image: "thumb1-2.jpg",
       title: "作品タイトル1-2",
       caption: "自然なズレによって構造が現れます。"
