--- a/about.html
+++ b/about.html
@@ -61,25 +61,80 @@
     </div>
 
     <h2>活動歴</h2>
-    <!-- 活動歴はこのままでOKです -->
-    <p>2018年　筑波大学芸術専門学群構成専攻有志展（筑波大学総合交流会館 / 茨城県つくば市）</p>
-    <p>2019年　なないろスポーツフェスタ 駅伝部門優勝トロフィー制作、参加記念Tシャツデザイン提供</p>
-    <p>2019年　表現の拡張展（筑波大学総合交流会館 / 茨城県つくば市）</p>
-    <p>2019年　筑波大学箱根駅伝復活プロジェクト Tシャツデザイン提供</p>
-    <p>2020年　筑波大学卒業制作展（つくば市美術館 / 茨城県つくば市）</p>
-    <p>2020年　SICF21（スパイラル / 表参道）グランプリ</p>
-    <p>2021年　クマ財団クリエイター奨学生（第5期生）</p>
-    <p>2021年　SICF21グランプリアーティスト展「SPOT-視点、回転、発展」（スパイラル / 表参道）</p>
-    <p>2021年　SICF21 Winners Exhibition（スパイラル / 表参道）</p>
-    <p>2021年　個展「Vary」（千年一日珈琲焙煎所 / 茨城県つくば市）</p>
-    <p>2022年　修了制作展（つくば市美術館）優秀作品賞</p>
-    <p>2022年　KUMA EXHIBITION 2022（ANB Tokyo / 六本木）</p>
-    <p>2022年　ワークショップ「とりだすかたち」（アートルーム企画室 / 広尾）</p>
-    <p>2022年　個展「image」（アートルーム企画室 / 広尾）</p>
-    <p>2023年　グループ展「SCENERY」（Marco Gallery / 心斎橋）</p>
-    <p>2023年　個展「光のりんかく」（Marco Gallery / 心斎橋）</p>
-    <p>2023年　武蔵野美術大学助教・助手展2023（武蔵野美術大学美術館 / 東京都小平市）</p>
-    <p>2024年　武蔵野美術大学助教・助手展2023（武蔵野美術大学美術館 / 東京都小平市）</p>
+    <div class="timeline">
+      <div class="timeline-row">
+        <div class="timeline-cell">2018年</div>
+        <div class="timeline-cell">筑波大学芸術専門学群構成専攻有志展（筑波大学総合交流会館 / 茨城県つくば市）</div>
+      </div>
+      <div class="timeline-row">
+        <div class="timeline-cell">2019年</div>
+        <div class="timeline-cell">なないろスポーツフェスタ 駅伝部門優勝トロフィー制作、参加記念Tシャツデザイン提供</div>
+      </div>
+      <div class="timeline-row">
+        <div class="timeline-cell"></div>
+        <div class="timeline-cell">表現の拡張展 （筑波大学総合交流会館 / 茨城県つくば市）</div>
+      </div>
+      <div class="timeline-row">
+        <div class="timeline-cell"></div>
+        <div class="timeline-cell">筑波大学箱根駅伝復活プロジェクト Tシャツデザイン提供</div>
+      </div>
+      <div class="timeline-row">
+        <div class="timeline-cell">2020年</div>
+        <div class="timeline-cell">筑波大学芸術専門学群卒業制作展（つくば市美術館 / 茨城県つくば市）</div>
+      </div>
+      <div class="timeline-row">
+        <div class="timeline-cell"></div>
+        <div class="timeline-cell">SICF21 （スパイラル / 表参道）グランプリ</div>
+      </div>
+      <div class="timeline-row">
+        <div class="timeline-cell">2021年</div>
+        <div class="timeline-cell">公益財団法人クマ財団クリエイター奨学生 第５期生 採択</div>
+      </div>
+      <div class="timeline-row">
+        <div class="timeline-cell"></div>
+        <div class="timeline-cell">SICF21 グランプリアーティスト展「SPOT-視点、回転、発展」（スパイラル / 表参道）</div>
+      </div>
+      <div class="timeline-row">
+        <div class="timeline-cell"></div>
+        <div class="timeline-cell">SICF21 Winners Exhibition  （スパイラル / 表参道）</div>
+      </div>
+      <div class="timeline-row">
+        <div class="timeline-cell"></div>
+        <div class="timeline-cell">個展「Vary」（千年一日珈琲焙煎所café / 茨城県つくば市）</div>
+      </div>
+      <div class="timeline-row">
+        <div class="timeline-cell">2022年</div>
+        <div class="timeline-cell">筑波大学大学院修了制作展 （つくば市美術館 / 茨城県つくば市）優秀作品賞</div>
+      </div>
+      <div class="timeline-row">
+        <div class="timeline-cell"></div>
+        <div class="timeline-cell">KUMA EXHIBITION 2022（ANB Tokyo / 六本木）</div>
+      </div>
+      <div class="timeline-row">
+        <div class="timeline-cell"></div>
+        <div class="timeline-cell">ワークショップ「とりだすかたち」（アートルーム企画室 / 広尾）</div>
+      </div>
+      <div class="timeline-row">
+        <div class="timeline-cell"></div>
+        <div class="timeline-cell">個展「image」（アートルーム企画室 / 広尾）</div>
+      </div>
+      <div class="timeline-row">
+        <div class="timeline-cell">2023年</div>
+        <div class="timeline-cell">グループ展「SCENERY」（Marco Gallery / 心斎橋）</div>
+      </div>
+      <div class="timeline-row">
+        <div class="timeline-cell"></div>
+        <div class="timeline-cell">個展「光のりんかく」（Marco Gallery / 心斎橋）</div>
+      </div>
+      <div class="timeline-row">
+        <div class="timeline-cell"></div>
+        <div class="timeline-cell">武蔵野美術大学助教・助手展2023（武蔵野美術大学美術館 / 東京都小平市）</div>
+      </div>
+      <div class="timeline-row">
+        <div class="timeline-cell">2024年</div>
+        <div class="timeline-cell">武蔵野美術大学助教・助手展2024（武蔵野美術大学美術館 / 東京都小平市）</div>
+      </div>
+    </div>
   </main>
 
   <script>
