--- a/about.html
+++ b/about.html
@@ -8,6 +8,9 @@
     .timeline {
       display: table;
       margin-bottom: 50px;
+      font-size: 0.8rem;
+      margin-top: 0px;
+      margin-bottom: 10px;
     }
     .timeline-row {
       display: table-row;
