--- a/about.html
+++ b/about.html
@@ -137,6 +137,34 @@
         <div class="timeline-cell">2024年</div>
         <div class="timeline-cell">武蔵野美術大学助教・助手展2024（武蔵野美術大学美術館 / 東京都小平市）</div>
       </div>
+      <div class="timeline-row">
+        <div class="timeline-cell">2024年</div>
+        <div class="timeline-cell">武蔵野美術大学助教・助手展2024（武蔵野美術大学美術館 / 東京都小平市）</div>
+      </div>
+      <div class="timeline-row">
+        <div class="timeline-cell">2024年</div>
+        <div class="timeline-cell">武蔵野美術大学助教・助手展2024（武蔵野美術大学美術館 / 東京都小平市）</div>
+      </div>
+      <div class="timeline-row">
+        <div class="timeline-cell">2024年</div>
+        <div class="timeline-cell">武蔵野美術大学助教・助手展2024（武蔵野美術大学美術館 / 東京都小平市）</div>
+      </div>
+      <div class="timeline-row">
+        <div class="timeline-cell">2024年</div>
+        <div class="timeline-cell">武蔵野美術大学助教・助手展2024（武蔵野美術大学美術館 / 東京都小平市）</div>
+      </div>
+      <div class="timeline-row">
+        <div class="timeline-cell">2024年</div>
+        <div class="timeline-cell">武蔵野美術大学助教・助手展2024（武蔵野美術大学美術館 / 東京都小平市）</div>
+      </div>
+      <div class="timeline-row">
+        <div class="timeline-cell">2024年</div>
+        <div class="timeline-cell">武蔵野美術大学助教・助手展2024（武蔵野美術大学美術館 / 東京都小平市）</div>
+      </div>
+      <div class="timeline-row">
+        <div class="timeline-cell">2024年</div>
+        <div class="timeline-cell">武蔵野美術大学助教・助手展2024（武蔵野美術大学美術館 / 東京都小平市）</div>
+      </div>
     </div>
   </main>
 
