--- a/exhibition.html
+++ b/exhibition.html
@@ -18,7 +18,7 @@
   </header>
 
   <main>
-    <div style="padding:50px; 100px; 100px; 100px;">
+    <div style="padding: 50px 100px;">
     <div>
       <img src="exhibition1.jpg" alt="exhibition1"style="width:50%; vertical-align: top;">
       <div style="display: inline-block; width:20%; vertical-align: top; padding-left: 30px;">
