--- a/contact.html
+++ b/contact.html
@@ -19,27 +19,13 @@
   </header>
 
   <main>
-    <form>
-    <div style="padding:50px; 100px; 100px; 100px;">
-      <div>
-        <label>Your name</label><br>
-        <input type="text" name="name" style="width:30%;">
-      </div>
-      <div style="margin-top:30px;">
-      <div>
-        <label>Your e-mail address</label><br>
-        <input type="email" name="email" style="width:30%;">
-      </div>
-      <div style="margin-top:30px;">
-      <div>
-        <label>Message</label><br>
-        <textarea name="message" rows="5" style="width:50%;"></textarea>
-      </div>
-      <button type="submit">送信</button>
-    </form>
     <div style="margin-top:100px;">
-      <a href="https://twitter.com/">Twitter</a> /
-      <a href="https://instagram.com/">Instagram</a>
+      <p>お問い合わせは下記メールアドレスまで</p>
+      <a href="hohohodayo@gmail.com">hohohodayo@gmail.com</a> /
+    </div>
+    <div style="margin-top:100px;">
+      <p><a href="https://twitter.com/">Twitter</a> /</p>
+      <p><a href="https://instagram.com/">Instagram</a></p>
     </div>
   </main>
 
