--- a/contact.html
+++ b/contact.html
@@ -19,11 +19,10 @@
   </header>
 
   <main>
-    <div style="margin-top:100px;">
+    <div style="padding: 50px;">
       <p>お問い合わせは下記メールアドレスまで</p>
-      <a href="hohohodayo@gmail.com">hohohodayo@gmail.com</a> /
-    </div>
-    <div style="margin-top:100px;">
+      <p>hohohodayo@gmail.com</p>
+      <p></p>
       <p><a href="https://twitter.com/">Twitter</a> /</p>
       <p><a href="https://instagram.com/">Instagram</a></p>
     </div>
