--- a/contact.html
+++ b/contact.html
@@ -20,10 +20,11 @@
 
   <main>
     <div style="padding: 50px;">
-      <p>お問い合わせは下記メールアドレスまで</p>
+      <p>作品購入、展覧会、その他お問い合わせは</p>
+      <p>下記メールアドレスまでお願いいたします</p>
       <p>hohohodayo@gmail.com</p>
-      <p></p>
-      <p><a href="https://twitter.com/">Twitter</a> /</p>
+      <br>
+      <p><a href="https://twitter.com/">Twitter</a></p>
       <p><a href="https://instagram.com/">Instagram</a></p>
     </div>
   </main>
