--- a/exhibition.html
+++ b/exhibition.html
@@ -21,7 +21,7 @@
     <div style="padding: 50px;">
     <div>
       <img src="exhibition1.jpg" alt="exhibition1"style="width:50%; vertical-align: top;">
-      <div style="display: inline-block; width:45%; vertical-align: center; padding-left: 100px;">
+      <div style="display: inline-block; width:45%; vertical-align: top; padding: 50px 100px;">
         <p>武蔵野美術大学 助教・助手展 2024</p>
         <p>2024.12.01 - 2024.12.15</p>
         <p>武蔵野美術大学美術館（小平市/東京）</p>
