--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,7 @@
 
   <main>
     <div style="padding: 100px;">
-      <p>作品購入、展覧会、その他お問い合わせは</p>
-      <p>下記メールアドレスまでお願いいたします</p>
+      <p>e-meil</p>
       <p>hohohodayo@gmail.com</p>
       <br>
       <p><a href="https://twitter.com/">Twitter</a></p>
