--- a/exhibition.html
+++ b/exhibition.html
@@ -24,7 +24,7 @@
       <div style="display: inline-block; width:45%; vertical-align: top; padding-left: 50px ;">
         <p>武蔵野美術大学 助教・助手展 2024</p>
         <p>2024.12.01 - 2024.12.15</p>
-        <p>武蔵野美術大学美術館（小平市/東京）</p>
+        <p>武蔵野美術大学美術館（小平市/東京）あああああああああああああああああああああああああああああああああああああ</p>
       </div>
     </div>
     
