--- a/exhibition.html
+++ b/exhibition.html
@@ -28,7 +28,7 @@
       </div>
     </div>
 
-    <div style="padding: 50px;">
+    <div style="margin-top:100px;">
     <div>
       <img src="exhibition2.jpg" alt="exhibition 2"style="width:50%; vertical-align: top;">
       <div style="display: inline-block; width:45%; vertical-align: top; padding-left: 50px;">
@@ -38,7 +38,7 @@
       </div>
     </div>
     
-    <div style="padding: 50px;">  
+    <div style="margin-top:100px;">  
     <div>
       <img src="exhibition3.jpg" alt="exhibition 2"style="width:50%; vertical-align: top;">
       <div style="display: inline-block; width:45%; vertical-align: top; padding-left: 50px;">
@@ -48,7 +48,7 @@
       </div>
     </div>
 
-    <div style="padding: 50px;">
+    <div style="margin-top:100px;">
     <div>
       <img src="exhibition4.jpg" alt="exhibition 2"style="width:50%; vertical-align: top;">
       <div style="display: inline-block; width:45%; vertical-align: top; padding-left: 50px;">
@@ -58,7 +58,7 @@
       </div>
     </div>
 
-    <div style="padding: 50px;">
+    <div style="margin-top:100px;">
     <div>
       <img src="exhibition5.jpg" alt="exhibition 2"style="width:50%; vertical-align: top;">
       <div style="display: inline-block; width:45%; vertical-align: top; padding-left: 50px;">
