--- a/exhibition.html
+++ b/exhibition.html
@@ -71,13 +71,15 @@
  
 <script>
     document.addEventListener("DOMContentLoaded", function () {
-      const hamburger = document.querySelector(".hamburger");
-      const nav = document.querySelector(".nav");
-
+    // ハンバーガーメニュー処理（どのページでも共通）
+    const hamburger = document.querySelector(".hamburger");
+    const nav = document.querySelector(".nav");
+    if (hamburger && nav) {
       hamburger.addEventListener("click", function () {
         nav.classList.toggle("show");
       });
-    });
+    }
+    
   </script>
 
 </body>
