--- a/exhibition.html
+++ b/exhibition.html
@@ -2,8 +2,8 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>Exhibition</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>exhibition</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
