--- a/about.html
+++ b/about.html
@@ -2,8 +2,8 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>About</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>about</title>
   <link rel="stylesheet" href="style.css" />
 <style>
     .timeline {
